[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/imrp/icons/Search.svg" type="Texture" id=1]
[ext_resource path="res://addons/imrp/src/scene/ImprovedResourcePicker.gd" type="Script" id=2]
[ext_resource path="res://addons/imrp/src/scene/Tree.gd" type="Script" id=3]

[node name="ImprovedResourcePicker" type="ConfirmationDialog"]
margin_right = 357.0
margin_bottom = 251.0
dialog_hide_on_ok = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 349.0
margin_bottom = 238.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_right = 341.0
margin_bottom = 24.0
clear_button_enabled = true
right_icon = ExtResource( 1 )

[node name="Tree" type="Tree" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 341.0
margin_bottom = 228.0
rect_min_size = Vector2( 100, 200 )
hide_folding = true
hide_root = true
script = ExtResource( 3 )

[connection signal="about_to_show" from="." to="." method="_on_ExchangedResourcePicker_about_to_show"]
[connection signal="confirmed" from="." to="." method="_on_ExchangedResourcePicker_confirmed"]
[connection signal="custom_action" from="." to="." method="_on_ExchangedResourcePicker_custom_action"]
[connection signal="popup_hide" from="." to="." method="_on_ExchangedResourcePicker_popup_hide"]
[connection signal="gui_input" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_gui_input"]
[connection signal="text_changed" from="VBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="item_activated" from="VBoxContainer/Tree" to="." method="_on_Tree_item_activated"]
[connection signal="item_double_clicked" from="VBoxContainer/Tree" to="." method="_on_Tree_item_double_clicked"]
